@@ -6,6 +6,7 @@ Roundcube Webmail MarkAsJunk2
  * Add Elastic skin support
  * Add markasjunk2_permanently_remove option (#56)
  * Integration with Swipe plugin
+ * %xds marco replaced with %h:<header name>
 
 Version 1.11.1 (2017-07-29, rc-1.3)
 =================================================
